# noyalib-lsp

./: CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-vet.yml  release.yml
benches/: lsp_handlers.rs
examples/: editor_session.rs
src/: diagnostics.rs  format.rs  hover.rs  lib.rs
supply-chain/: config.toml
tests/: format_coverage.rs  protocol.rs
