[package]
name = "noyalib-lsp"
version = "0.0.16"
edition = "2024"
# Lockstep floor with the noyalib core (1.86.0 as of v0.0.16).
# Also required independently here: the LSP transport stack
# (litemap 0.7.5, uuid 1.23) and the `validate-schema` feature
# both need rustc 1.86+.
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
description = "Language Server Protocol implementation for noyalib — YAML formatting, validation, and hover-driven JSON Schema descriptions"
repository = "https://github.com/sebastienrousseau/noyalib-lsp"
homepage = "https://github.com/sebastienrousseau/noyalib-lsp"
documentation = "https://docs.rs/noyalib-lsp"
readme = "README.md"
keywords = ["yaml", "lsp", "language-server", "editor", "noyalib"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]

[lib]
name = "noyalib_lsp"
path = "src/lib.rs"

[[bin]]
name = "noyalib-lsp"
path = "src/main.rs"

[dependencies]
noyalib = { version = "=0.0.16", default-features = false, features = ["std", "validate-schema"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "lsp_handlers"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
